changelog.txt

This file is used to track changes to IOLabWeb and to show what is currently being worked on. 
(Questions or suggestions to mats@illinois.edu)

====================== RELEASES ====================================
v0.8.40 4/1/21
Innitial alpha release. No known bugs but I'm sure that will change as soon as someone else uses it. 

v0.8.41 4/1/21
Moved calibration button to the left. Changed "Start" "Record" and "Stop" to "Stop/Pause"  

v0.8.45 4/6/21
Some small improvements to UX (button placements etc)  

v0.8.48 4/9/21
Added CSV export button for each chart 

v0.8.50 4/10/21
Added sample rate to chart title
Store more config info with saved data & check version when restoring 
Moved software version to globalVariables.js and added compatibility check for retored data
Several small housekeeping items (fingers crossed nothing broke)

v0.8.52 4/16/2021
Speed up panning by implementing sparse plotting when Ndata >> Npixels
Added unit "n/a" for light and sound since these are not calibrated

v0.8.55 4/18/2021
Added zip compression to files used for saving & restoring acquisitions.
The files now have names like "IOLab_Apr-18-2021_19.48.59_Pendulum_29s.iozip".
Files saved with previous versions will not be readable. 

v0.8.56 4/xx/2021
Better rezero icon. 

====================== WORK ========================================
Known Bugs:
- Sometimes plots empty if not viewed before csv export of another plot (only Mac ?)
- Sometimes restoring a data file created on another computer fails on Chromebook. 
  The same file might sometimes fail and sometimes work?
  This does not happen on Mac & Win with files created on Chromebook. 
  **These issues may be fixed in 0.8.55 but I still need to test this**

Front Burner Tasks:
- Add controls for DAC and other outputs

Back Burner Tasks:
- Revisit time shift
- Rationalize usage of calData vs plotData in plotting code
- display rezero icon on all zeroable plots when linked
- save/restore dataShift (?)