@@ -759,38 +759,136 @@ var iolabConfig =
       "autoScaleY": true
     }
   ],
-  "DACVAlues": [
-    { "value": 0, "label": "0.0"},
-    { "value": 1, "label": "0.1"},
-    { "value": 2, "label": "0.2"},
-    { "value": 3, "label": "0.3"},
-    { "value": 4, "label": "0.4"},
-    { "value": 5, "label": "0.5"},
-    { "value": 6, "label": "0.6"},
-    { "value": 7, "label": "0.7"},
-    { "value": 8, "label": "0.8"},
-    { "value": 9, "label": "1.0"},
-    { "value": 10, "label": "1.1"},
-    { "value": 11, "label": "1.2"},
-    { "value": 12, "label": "1.3"},
-    { "value": 13, "label": "1.4"},
-    { "value": 14, "label": "1.5"},
-    { "value": 15, "label": "1.6"},
-    { "value": 16, "label": "1.7"},
-    { "value": 17, "label": "1.8"},
-    { "value": 18, "label": "1.9"},
-    { "value": 19, "label": "2.0"},
-    { "value": 20, "label": "2.1"},
-    { "value": 21, "label": "2.2"},
-    { "value": 22, "label": "2.3"},
-    { "value": 23, "label": "2.4"},
-    { "value": 24, "label": "2.5"},
-    { "value": 25, "label": "2.7"},
-    { "value": 26, "label": "2.8"},
-    { "value": 27, "label": "2.9"},
-    { "value": 28, "label": "3.0"},
-    { "value": 29, "label": "3.1"},
-    { "value": 30, "label": "3.2"},
-    { "value": 31, "label": "3.3"}
-  ]
+  "DACValues": [
+    { "val": 0, "lbl": "0.0"},
+    { "val": 1, "lbl": "0.1"},
+    { "val": 2, "lbl": "0.2"},
+    { "val": 3, "lbl": "0.3"},
+    { "val": 4, "lbl": "0.4"},
+    { "val": 5, "lbl": "0.5"},
+    { "val": 6, "lbl": "0.6"},
+    { "val": 7, "lbl": "0.7"},
+    { "val": 8, "lbl": "0.8"},
+    { "val": 9, "lbl": "1.0"},
+    { "val": 10, "lbl": "1.1"},
+    { "val": 11, "lbl": "1.2"},
+    { "val": 12, "lbl": "1.3"},
+    { "val": 13, "lbl": "1.4"},
+    { "val": 14, "lbl": "1.5"},
+    { "val": 15, "lbl": "1.6"},
+    { "val": 16, "lbl": "1.7"},
+    { "val": 17, "lbl": "1.8"},
+    { "val": 18, "lbl": "1.9"},
+    { "val": 19, "lbl": "2.0"},
+    { "val": 20, "lbl": "2.1"},
+    { "val": 21, "lbl": "2.2"},
+    { "val": 22, "lbl": "2.3"},
+    { "val": 23, "lbl": "2.4"},
+    { "val": 24, "lbl": "2.5"},
+    { "val": 25, "lbl": "2.7"},
+    { "val": 26, "lbl": "2.8"},
+    { "val": 27, "lbl": "2.9"},
+    { "val": 28, "lbl": "3.0"},
+    { "val": 29, "lbl": "3.1"},
+    { "val": 30, "lbl": "3.2"},
+    { "val": 31, "lbl": "3.3"}
+  ],
+  "D5pwmValues": [
+    { "key": 1, "val": 0, "lbl": "20"},
+    { "key": 1, "val": 1, "lbl": "25"},
+    { "key": 1, "val": 2, "lbl": "30"},
+    { "key": 1, "val": 3, "lbl": "35"},
+    { "key": 1, "val": 4, "lbl": "40"},
+    { "key": 1, "val": 5, "lbl": "45"},
+    { "key": 1, "val": 6, "lbl": "50"},
+    { "key": 1, "val": 7, "lbl": "55"},
+    { "key": 1, "val": 8, "lbl": "60"},
+    { "key": 1, "val": 9, "lbl": "65"},
+    { "key": 1, "val": 10, "lbl": "70"},
+    { "key": 1, "val": 11, "lbl": "75"},
+    { "key": 1, "val": 12, "lbl": "80"},
+    { "key": 1, "val": 13, "lbl": "85"},
+    { "key": 1, "val": 14, "lbl": "90"},
+    { "key": 1, "val": 15, "lbl": "95"},
+    { "key": 1, "val": 16, "lbl": "100"},
+    { "key": 1, "val": 17, "lbl": "150"},
+    { "key": 1, "val": 18, "lbl": "200"},
+    { "key": 1, "val": 19, "lbl": "250"},
+    { "key": 1, "val": 20, "lbl": "300"},
+    { "key": 1, "val": 21, "lbl": "350"},
+    { "key": 1, "val": 22, "lbl": "400"},
+    { "key": 1, "val": 23, "lbl": "450"},
+    { "key": 1, "val": 24, "lbl": "500"},
+    { "key": 1, "val": 25, "lbl": "600"},
+    { "key": 1, "val": 26, "lbl": "700"},
+    { "key": 1, "val": 27, "lbl": "800"},
+    { "key": 1, "val": 28, "lbl": "900"},
+    { "key": 1, "val": 29, "lbl": "1000"},
+    { "key": 1, "val": 30, "lbl": "1100"},
+    { "key": 1, "val": 31, "lbl": "1200"},
+    { "key": 2, "val": 0, "lbl": "1400"},
+    { "key": 2, "val": 1, "lbl": "1600"},
+    { "key": 2, "val": 2, "lbl": "1800"},
+    { "key": 2, "val": 3, "lbl": "2000"},
+    { "key": 2, "val": 4, "lbl": "2200"},
+    { "key": 2, "val": 5, "lbl": "2400"},
+    { "key": 2, "val": 6, "lbl": "2600"},
+    { "key": 2, "val": 7, "lbl": "2800"},
+    { "key": 2, "val": 8, "lbl": "3000"},
+    { "key": 2, "val": 9, "lbl": "3200"},
+    { "key": 2, "val": 10, "lbl": "3400"},
+    { "key": 2, "val": 11, "lbl": "3600"},
+    { "key": 2, "val": 12, "lbl": "3800"},
+    { "key": 2, "val": 13, "lbl": "4000"},
+    { "key": 2, "val": 14, "lbl": "4200"},
+    { "key": 2, "val": 15, "lbl": "4400"},
+    { "key": 2, "val": 16, "lbl": "4600"},
+    { "key": 2, "val": 17, "lbl": "4800"},
+    { "key": 2, "val": 18, "lbl": "5000"},
+    { "key": 2, "val": 19, "lbl": "5500"},
+    { "key": 2, "val": 20, "lbl": "6000"},
+    { "key": 2, "val": 21, "lbl": "6500"},
+    { "key": 2, "val": 22, "lbl": "7000"},
+    { "key": 2, "val": 23, "lbl": "7500"},
+    { "key": 2, "val": 24, "lbl": "8000"},
+    { "key": 2, "val": 25, "lbl": "8500"},
+    { "key": 2, "val": 26, "lbl": "9000"},
+    { "key": 2, "val": 27, "lbl": "9500"},
+    { "key": 2, "val": 28, "lbl": "10000"},
+    { "key": 2, "val": 29, "lbl": "10500"},
+    { "key": 2, "val": 30, "lbl": "11000"},
+    { "key": 2, "val": 31, "lbl": "11500"},
+    { "key": 3, "val": 0, "lbl": "12000"},
+    { "key": 3, "val": 1, "lbl": "12500"},
+    { "key": 3, "val": 2, "lbl": "13000"},
+    { "key": 3, "val": 3, "lbl": "13500"},
+    { "key": 3, "val": 4, "lbl": "14000"},
+    { "key": 3, "val": 5, "lbl": "14500"},
+    { "key": 3, "val": 6, "lbl": "15000"},
+    { "key": 3, "val": 7, "lbl": "15500"},
+    { "key": 3, "val": 8, "lbl": "16000"},
+    { "key": 3, "val": 9, "lbl": "16500"},
+    { "key": 3, "val": 10, "lbl": "17000"},
+    { "key": 3, "val": 11, "lbl": "18000"},
+    { "key": 3, "val": 12, "lbl": "19000"},
+    { "key": 3, "val": 13, "lbl": "20000"},
+    { "key": 3, "val": 14, "lbl": "21000"},
+    { "key": 3, "val": 15, "lbl": "22000"},
+    { "key": 3, "val": 16, "lbl": "23000"},
+    { "key": 3, "val": 17, "lbl": "24000"},
+    { "key": 3, "val": 18, "lbl": "25000"},
+    { "key": 3, "val": 19, "lbl": "26000"},
+    { "key": 3, "val": 20, "lbl": "27000"},
+    { "key": 3, "val": 21, "lbl": "28000"},
+    { "key": 3, "val": 22, "lbl": "29000"},
+    { "key": 3, "val": 23, "lbl": "30000"},
+    { "key": 3, "val": 24, "lbl": "31000"},
+    { "key": 3, "val": 25, "lbl": "32000"},
+    { "key": 3, "val": 26, "lbl": "33000"},
+    { "key": 3, "val": 27, "lbl": "34000"},
+    { "key": 3, "val": 28, "lbl": "35000"},
+    { "key": 3, "val": 29, "lbl": "36000"},
+    { "key": 3, "val": 30, "lbl": "37000"},
+    { "key": 3, "val": 31, "lbl": "37500"}
+  ]  
 }
