@@ -92,12 +92,16 @@
               <img id="calBtnImg" src="images/calruler1.PNG" valign="bottom"></a>
               
               &nbsp;&nbsp;
-              <span id="dacCtl" title="Control DAC Output">
-                DAC:<input id="dac_ck" type="checkbox">
-                <!-- <label><select class="daqselect" id="DACpicker"></select></label> -->
+              <span title="Control DAC Output">
+                DAC:<input id="dacCK" type="checkbox">
                 <select class="daqselect" id="dacPicker"></select>
               </span>
               
+              &nbsp;&nbsp;
+              <span title="Control D5 Output">
+                D5:<input id="d5CK" type="checkbox">
+                <select class="d5select" id="d5Picker"></select>
+              </span>
 
           </td>
         </tr>
